docs(okf): the launcher JVM-flag pass-through, as built
INSPECTO_JAVA_OPTS / EXTRA_JAVA_OPTS belong in the durable operations concept, not
only in BACKLOG rows and FEATURE_INVENTORY: it is the supported way to add a JVM flag
to a packaged bundle, and the ⛔ on JAVA_OPTS is the part an operator needs, since the
scripts assign that name and silently discard it.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>